<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvNewContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_action_add"
        android:drawablePadding="@dimen/sizeSixteen"
        android:gravity="center_vertical"
        android:minHeight="@dimen/rowMinHeight"
        android:paddingStart="@dimen/sizeSixteen"
        android:text="@string/dp_contact_new"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/textSizeNormal"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/tvAddContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_action_add"
        android:drawablePadding="@dimen/sizeSixteen"
        android:gravity="center_vertical"
        android:minHeight="@dimen/rowMinHeight"
        android:paddingStart="@dimen/sizeSixteen"
        android:text="@string/dp_contact_add"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/textSizeNormal"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/tvSendMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_action_message"
        android:drawablePadding="@dimen/sizeSixteen"
        android:gravity="center_vertical"
        android:minHeight="@dimen/rowMinHeight"
        android:paddingStart="@dimen/sizeSixteen"
        android:text="@string/dp_message_send"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/textSizeNormal"
        tools:ignore="RtlSymmetry" />

</LinearLayout>